Bug 1446832: Update hover state before firing mouseleave, to match other browsers. r=smaug

Reviewers: smaug

Bug #: 1446832

Differential Revision: https://phabricator.services.mozilla.com/D772

MozReview-Commit-ID: HKkK5jReVVh